# Marine_automation

./: .gitignore
.svn/: wc.db
MOOS_Aug2322/proj-5.2.0/nad/: epsg
MOOS_Jul0519/proj-5.2.0/nad/: epsg
ivp/data/: AerialMIT.tif  MIT_SP.tif  forrest19.tif
ivp/missions/alpha_heron/: .LastOpenedMOOSLogDirectory  launch.sh  plug_iM300.moos  targ_beacon.moos  targ_shoreside.moos
ivp/missions/s1_alpha/: alpha.moos++
moos-ivp-backupp/alpha_heron/.svn/: wc.db
moos-ivp-pavlab-aro-backup/.svn/: wc.db
moos-ivp-pavlab-aro-backup/moos-ivp-pavlab-backup/: .M300.cpp.swp  CMakeLists.txt  M300.cpp
moos-ivp-pavlab-aro-backup/moos-ivp-pavlab-backup/src/pBathyGrider/: CMakeLists.txt
sea_alpha_heron/: launch_now.sh  launch_vehicle.sh  meta_vehicle.bhv  meta_vehicle.moos  plug_uSimMarineV22.moos
sea_alpha_heron/.svn/: wc.db
shore_alpha_heron/: .LastOpenedMOOSLogDirectory  launch.sh  launch_real.sh  launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_origin_warp.moos  plug_uSimMarineV22.moos  targ_decoy.moos  targ_shoreside.moos  targ_swimmer.moos
shore_alpha_heron/.svn/: wc.db
shore_alpha_heron/LOG_DECOY_17_3_2024_____22_12_56/: LOG_DECOY_17_3_2024_____22_12_56._moos  LOG_DECOY_17_3_2024_____22_12_56.alog  LOG_DECOY_17_3_2024_____22_12_56.slog  LOG_DECOY_17_3_2024_____22_12_56.ylog
shore_alpha_heron/LOG_DECOY_17_3_2024_____22_13_55/: LOG_DECOY_17_3_2024_____22_13_55._moos  LOG_DECOY_17_3_2024_____22_13_55.alog  LOG_DECOY_17_3_2024_____22_13_55.slog  LOG_DECOY_17_3_2024_____22_13_55.ylog
shore_alpha_heron/LOG_SHORESIDE_17_3_2024_____22_12_56/: LOG_SHORESIDE_17_3_2024_____22_12_56._moos  LOG_SHORESIDE_17_3_2024_____22_12_56.alog  LOG_SHORESIDE_17_3_2024_____22_12_56.slog  LOG_SHORESIDE_17_3_2024_____22_12_56.ylog
shore_alpha_heron/LOG_SHORESIDE_17_3_2024_____22_13_54/: LOG_SHORESIDE_17_3_2024_____22_13_54._moos  LOG_SHORESIDE_17_3_2024_____22_13_54.alog  LOG_SHORESIDE_17_3_2024_____22_13_54.slog  LOG_SHORESIDE_17_3_2024_____22_13_54.ylog
shore_alpha_heron/LOG_SWIMMER_17_3_2024_____22_12_56/: LOG_SWIMMER_17_3_2024_____22_12_56._moos  LOG_SWIMMER_17_3_2024_____22_12_56.alog  LOG_SWIMMER_17_3_2024_____22_12_56.slog  LOG_SWIMMER_17_3_2024_____22_12_56.ylog
shore_alpha_heron/LOG_SWIMMER_17_3_2024_____22_13_54/: LOG_SWIMMER_17_3_2024_____22_13_54._moos  LOG_SWIMMER_17_3_2024_____22_13_54.alog  LOG_SWIMMER_17_3_2024_____22_13_54.slog  LOG_SWIMMER_17_3_2024_____22_13_54.ylog  targ_swimmer._bhv
(+73 files in other folders)
